Compilers/Lab3.2/my_parser/parser.output
State 118 conflicts: 19 reduce/reduce


Grammar

    0 $accept: start $end

    1 start: class newline
    2      | class

    3 class: CLASS_KEY addindent class_sig deindent
    4      | STRUCT_KEY addindent class_sig deindent

    5 class_sig: class_name newline class_body
    6          | class_name class_body

    7 class_name: ident FINAL
    8           | ident

    9 class_body: newline LEFT_BRACE newline class_inside_first RIGHT_BRACE SEMICOLON
   10           | LEFT_BRACE newline class_inside_first RIGHT_BRACE SEMICOLON
   11           | LEFT_BRACE class_inside_first RIGHT_BRACE SEMICOLON

   12 class_inside_first: class_FCMs class_inside
   13                   | class_inside

   14 class_inside: access_modifier COLON newline addindent class_FCMs deindent class_inside
   15             | %empty

   16 comments: COMMENT idents newline

   17 class_FCMs: class_FCM class_FCMs
   18           | class_FCM

   19 class_FCM: class newline
   20          | class
   21          | method_decl newline
   22          | method_decl
   23          | typespec method_decl newline
   24          | typespec method_decl
   25          | typespec variables SEMICOLON newline
   26          | typespec variables SEMICOLON
   27          | comments

   28 typespec: type_specifier newline
   29         | type_specifier

   30 method_decl: ident method_decl_preparen
   31            | ident newline method_decl_preparen

   32 method_decl_preparen: LEFT_PAREN method_decl_afterparen

   33 method_decl_afterparen: method_params method_decl_beforeclose

   34 method_decl_beforeclose: RIGHT_PAREN newline method_decl_braces
   35                        | RIGHT_PAREN method_decl_braces

   36 method_decl_braces: LEFT_BRACE newline method_decl_end
   37                   | LEFT_BRACE method_decl_end

   38 method_decl_end: RIGHT_BRACE newline SEMICOLON
   39                | RIGHT_BRACE SEMICOLON

   40 method_params: type_specifier newline_idents
   41              | type_specifier method_params_tail
   42              | newline method_params
   43              | %empty

   44 newline_idents: idents method_params_tail
   45               | newline newline_idents

   46 method_params_tail: COMMA type_specifier ident method_params_tail
   47                   | COMMA type_specifier newline ident method_params_tail
   48                   | COMMA type_specifier method_params_tail
   49                   | newline method_params_tail
   50                   | %empty

   51 variables: ident variables_tail
   52          | ident

   53 variables_tail: COMMA ident variables_tail
   54               | COMMA ident

   55 access_modifier: PUBLIC_MOD
   56                | PROTECTED_MOD
   57                | PRIVATE_MOD

   58 type_specifier: CHAR_TYPE pointers
   59               | BOOL_TYPE pointers
   60               | SHORT_TYPE pointers
   61               | INT_TYPE pointers
   62               | LONG_TYPE pointers
   63               | FLOAT_TYPE pointers
   64               | DOUBLE_TYPE pointers
   65               | VOID_TYPE pointers
   66               | AUTO_TYPE pointers

   67 pointers: POINTER pointers
   68         | %empty

   69 idents: ident idents
   70       | ident

   71 ident: IDENTIFIER

   72 addindent: %empty

   73 deindent: %empty

   74 newline: NEWLINE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    CLASS_KEY (258) 3
    STRUCT_KEY (259) 4
    LEFT_BRACE (260) 9 10 11 36 37
    RIGHT_BRACE (261) 9 10 11 38 39
    LEFT_PAREN (262) 32
    RIGHT_PAREN (263) 34 35
    SEMICOLON (264) 9 10 11 25 26 38 39
    COMMA (265) 46 47 48 53 54
    COLON (266) 14
    NEWLINE (267) 74
    COMMENT (268) 16
    FINAL (269) 7
    PUBLIC_MOD (270) 55
    PROTECTED_MOD (271) 56
    PRIVATE_MOD (272) 57
    CHAR_TYPE (273) 58
    BOOL_TYPE (274) 59
    SHORT_TYPE (275) 60
    INT_TYPE (276) 61
    LONG_TYPE (277) 62
    FLOAT_TYPE (278) 63
    DOUBLE_TYPE (279) 64
    VOID_TYPE (280) 65
    AUTO_TYPE (281) 66
    POINTER (282) 67
    IDENTIFIER <identifier> (283) 71


Nonterminals, with rules where they appear

    $accept (29)
        on left: 0
    start <identifier> (30)
        on left: 1 2
        on right: 0
    class <identifier> (31)
        on left: 3 4
        on right: 1 2 19 20
    class_sig <identifier> (32)
        on left: 5 6
        on right: 3 4
    class_name <identifier> (33)
        on left: 7 8
        on right: 5 6
    class_body <identifier> (34)
        on left: 9 10 11
        on right: 5 6
    class_inside_first <identifier> (35)
        on left: 12 13
        on right: 9 10 11
    class_inside <identifier> (36)
        on left: 14 15
        on right: 12 13 14
    comments <identifier> (37)
        on left: 16
        on right: 27
    class_FCMs <identifier> (38)
        on left: 17 18
        on right: 12 14 17
    class_FCM <identifier> (39)
        on left: 19 20 21 22 23 24 25 26 27
        on right: 17 18
    typespec <identifier> (40)
        on left: 28 29
        on right: 23 24 25 26
    method_decl <identifier> (41)
        on left: 30 31
        on right: 21 22 23 24
    method_decl_preparen <identifier> (42)
        on left: 32
        on right: 30 31
    method_decl_afterparen <identifier> (43)
        on left: 33
        on right: 32
    method_decl_beforeclose <identifier> (44)
        on left: 34 35
        on right: 33
    method_decl_braces <identifier> (45)
        on left: 36 37
        on right: 34 35
    method_decl_end <identifier> (46)
        on left: 38 39
        on right: 36 37
    method_params <identifier> (47)
        on left: 40 41 42 43
        on right: 33 42
    newline_idents <identifier> (48)
        on left: 44 45
        on right: 40 45
    method_params_tail <identifier> (49)
        on left: 46 47 48 49 50
        on right: 41 44 46 47 48 49
    variables <identifier> (50)
        on left: 51 52
        on right: 25 26
    variables_tail <identifier> (51)
        on left: 53 54
        on right: 51 53
    access_modifier <identifier> (52)
        on left: 55 56 57
        on right: 14
    type_specifier <identifier> (53)
        on left: 58 59 60 61 62 63 64 65 66
        on right: 28 29 40 41 46 47 48
    pointers <identifier> (54)
        on left: 67 68
        on right: 58 59 60 61 62 63 64 65 66 67
    idents <identifier> (55)
        on left: 69 70
        on right: 16 44 69
    ident <identifier> (56)
        on left: 71
        on right: 7 8 30 31 46 47 51 52 53 54 69 70
    addindent <identifier> (57)
        on left: 72
        on right: 3 4 14
    deindent <identifier> (58)
        on left: 73
        on right: 3 4 14
    newline <identifier> (59)
        on left: 74
        on right: 1 5 9 10 14 16 19 21 23 25 28 31 34 36 38 42 45 47 49


State 0

    0 $accept: . start $end

    CLASS_KEY   shift, and go to state 1
    STRUCT_KEY  shift, and go to state 2

    start  go to state 3
    class  go to state 4


State 1

    3 class: CLASS_KEY . addindent class_sig deindent

    $default  reduce using rule 72 (addindent)

    addindent  go to state 5


State 2

    4 class: STRUCT_KEY . addindent class_sig deindent

    $default  reduce using rule 72 (addindent)

    addindent  go to state 6


State 3

    0 $accept: start . $end

    $end  shift, and go to state 7


State 4

    1 start: class . newline
    2      | class .

    NEWLINE  shift, and go to state 8

    $default  reduce using rule 2 (start)

    newline  go to state 9


State 5

    3 class: CLASS_KEY addindent . class_sig deindent

    IDENTIFIER  shift, and go to state 10

    class_sig   go to state 11
    class_name  go to state 12
    ident       go to state 13


State 6

    4 class: STRUCT_KEY addindent . class_sig deindent

    IDENTIFIER  shift, and go to state 10

    class_sig   go to state 14
    class_name  go to state 12
    ident       go to state 13


State 7

    0 $accept: start $end .

    $default  accept


State 8

   74 newline: NEWLINE .

    $default  reduce using rule 74 (newline)


State 9

    1 start: class newline .

    $default  reduce using rule 1 (start)


State 10

   71 ident: IDENTIFIER .

    $default  reduce using rule 71 (ident)


State 11

    3 class: CLASS_KEY addindent class_sig . deindent

    $default  reduce using rule 73 (deindent)

    deindent  go to state 15


State 12

    5 class_sig: class_name . newline class_body
    6          | class_name . class_body

    LEFT_BRACE  shift, and go to state 16
    NEWLINE     shift, and go to state 8

    class_body  go to state 17
    newline     go to state 18


State 13

    7 class_name: ident . FINAL
    8           | ident .

    FINAL  shift, and go to state 19

    $default  reduce using rule 8 (class_name)


State 14

    4 class: STRUCT_KEY addindent class_sig . deindent

    $default  reduce using rule 73 (deindent)

    deindent  go to state 20


State 15

    3 class: CLASS_KEY addindent class_sig deindent .

    $default  reduce using rule 3 (class)


State 16

   10 class_body: LEFT_BRACE . newline class_inside_first RIGHT_BRACE SEMICOLON
   11           | LEFT_BRACE . class_inside_first RIGHT_BRACE SEMICOLON

    CLASS_KEY      shift, and go to state 1
    STRUCT_KEY     shift, and go to state 2
    NEWLINE        shift, and go to state 8
    COMMENT        shift, and go to state 21
    PUBLIC_MOD     shift, and go to state 22
    PROTECTED_MOD  shift, and go to state 23
    PRIVATE_MOD    shift, and go to state 24
    CHAR_TYPE      shift, and go to state 25
    BOOL_TYPE      shift, and go to state 26
    SHORT_TYPE     shift, and go to state 27
    INT_TYPE       shift, and go to state 28
    LONG_TYPE      shift, and go to state 29
    FLOAT_TYPE     shift, and go to state 30
    DOUBLE_TYPE    shift, and go to state 31
    VOID_TYPE      shift, and go to state 32
    AUTO_TYPE      shift, and go to state 33
    IDENTIFIER     shift, and go to state 10

    $default  reduce using rule 15 (class_inside)

    class               go to state 34
    class_inside_first  go to state 35
    class_inside        go to state 36
    comments            go to state 37
    class_FCMs          go to state 38
    class_FCM           go to state 39
    typespec            go to state 40
    method_decl         go to state 41
    access_modifier     go to state 42
    type_specifier      go to state 43
    ident               go to state 44
    newline             go to state 45


State 17

    6 class_sig: class_name class_body .

    $default  reduce using rule 6 (class_sig)


State 18

    5 class_sig: class_name newline . class_body
    9 class_body: newline . LEFT_BRACE newline class_inside_first RIGHT_BRACE SEMICOLON

    LEFT_BRACE  shift, and go to state 46
    NEWLINE     shift, and go to state 8

    class_body  go to state 47
    newline     go to state 48


State 19

    7 class_name: ident FINAL .

    $default  reduce using rule 7 (class_name)


State 20

    4 class: STRUCT_KEY addindent class_sig deindent .

    $default  reduce using rule 4 (class)


State 21

   16 comments: COMMENT . idents newline

    IDENTIFIER  shift, and go to state 10

    idents  go to state 49
    ident   go to state 50


State 22

   55 access_modifier: PUBLIC_MOD .

    $default  reduce using rule 55 (access_modifier)


State 23

   56 access_modifier: PROTECTED_MOD .

    $default  reduce using rule 56 (access_modifier)


State 24

   57 access_modifier: PRIVATE_MOD .

    $default  reduce using rule 57 (access_modifier)


State 25

   58 type_specifier: CHAR_TYPE . pointers

    POINTER  shift, and go to state 51

    $default  reduce using rule 68 (pointers)

    pointers  go to state 52


State 26

   59 type_specifier: BOOL_TYPE . pointers

    POINTER  shift, and go to state 51

    $default  reduce using rule 68 (pointers)

    pointers  go to state 53


State 27

   60 type_specifier: SHORT_TYPE . pointers

    POINTER  shift, and go to state 51

    $default  reduce using rule 68 (pointers)

    pointers  go to state 54


State 28

   61 type_specifier: INT_TYPE . pointers

    POINTER  shift, and go to state 51

    $default  reduce using rule 68 (pointers)

    pointers  go to state 55


State 29

   62 type_specifier: LONG_TYPE . pointers

    POINTER  shift, and go to state 51

    $default  reduce using rule 68 (pointers)

    pointers  go to state 56


State 30

   63 type_specifier: FLOAT_TYPE . pointers

    POINTER  shift, and go to state 51

    $default  reduce using rule 68 (pointers)

    pointers  go to state 57


State 31

   64 type_specifier: DOUBLE_TYPE . pointers

    POINTER  shift, and go to state 51

    $default  reduce using rule 68 (pointers)

    pointers  go to state 58


State 32

   65 type_specifier: VOID_TYPE . pointers

    POINTER  shift, and go to state 51

    $default  reduce using rule 68 (pointers)

    pointers  go to state 59


State 33

   66 type_specifier: AUTO_TYPE . pointers

    POINTER  shift, and go to state 51

    $default  reduce using rule 68 (pointers)

    pointers  go to state 60


State 34

   19 class_FCM: class . newline
   20          | class .

    NEWLINE  shift, and go to state 8

    $default  reduce using rule 20 (class_FCM)

    newline  go to state 61


State 35

   11 class_body: LEFT_BRACE class_inside_first . RIGHT_BRACE SEMICOLON

    RIGHT_BRACE  shift, and go to state 62


State 36

   13 class_inside_first: class_inside .

    $default  reduce using rule 13 (class_inside_first)


State 37

   27 class_FCM: comments .

    $default  reduce using rule 27 (class_FCM)


State 38

   12 class_inside_first: class_FCMs . class_inside

    PUBLIC_MOD     shift, and go to state 22
    PROTECTED_MOD  shift, and go to state 23
    PRIVATE_MOD    shift, and go to state 24

    $default  reduce using rule 15 (class_inside)

    class_inside     go to state 63
    access_modifier  go to state 42


State 39

   17 class_FCMs: class_FCM . class_FCMs
   18           | class_FCM .

    CLASS_KEY    shift, and go to state 1
    STRUCT_KEY   shift, and go to state 2
    COMMENT      shift, and go to state 21
    CHAR_TYPE    shift, and go to state 25
    BOOL_TYPE    shift, and go to state 26
    SHORT_TYPE   shift, and go to state 27
    INT_TYPE     shift, and go to state 28
    LONG_TYPE    shift, and go to state 29
    FLOAT_TYPE   shift, and go to state 30
    DOUBLE_TYPE  shift, and go to state 31
    VOID_TYPE    shift, and go to state 32
    AUTO_TYPE    shift, and go to state 33
    IDENTIFIER   shift, and go to state 10

    $default  reduce using rule 18 (class_FCMs)

    class           go to state 34
    comments        go to state 37
    class_FCMs      go to state 64
    class_FCM       go to state 39
    typespec        go to state 40
    method_decl     go to state 41
    type_specifier  go to state 43
    ident           go to state 44


State 40

   23 class_FCM: typespec . method_decl newline
   24          | typespec . method_decl
   25          | typespec . variables SEMICOLON newline
   26          | typespec . variables SEMICOLON

    IDENTIFIER  shift, and go to state 10

    method_decl  go to state 65
    variables    go to state 66
    ident        go to state 67


State 41

   21 class_FCM: method_decl . newline
   22          | method_decl .

    NEWLINE  shift, and go to state 8

    $default  reduce using rule 22 (class_FCM)

    newline  go to state 68


State 42

   14 class_inside: access_modifier . COLON newline addindent class_FCMs deindent class_inside

    COLON  shift, and go to state 69


State 43

   28 typespec: type_specifier . newline
   29         | type_specifier .

    NEWLINE  shift, and go to state 8

    $default  reduce using rule 29 (typespec)

    newline  go to state 70


State 44

   30 method_decl: ident . method_decl_preparen
   31            | ident . newline method_decl_preparen

    LEFT_PAREN  shift, and go to state 71
    NEWLINE     shift, and go to state 8

    method_decl_preparen  go to state 72
    newline               go to state 73


State 45

   10 class_body: LEFT_BRACE newline . class_inside_first RIGHT_BRACE SEMICOLON

    CLASS_KEY      shift, and go to state 1
    STRUCT_KEY     shift, and go to state 2
    COMMENT        shift, and go to state 21
    PUBLIC_MOD     shift, and go to state 22
    PROTECTED_MOD  shift, and go to state 23
    PRIVATE_MOD    shift, and go to state 24
    CHAR_TYPE      shift, and go to state 25
    BOOL_TYPE      shift, and go to state 26
    SHORT_TYPE     shift, and go to state 27
    INT_TYPE       shift, and go to state 28
    LONG_TYPE      shift, and go to state 29
    FLOAT_TYPE     shift, and go to state 30
    DOUBLE_TYPE    shift, and go to state 31
    VOID_TYPE      shift, and go to state 32
    AUTO_TYPE      shift, and go to state 33
    IDENTIFIER     shift, and go to state 10

    $default  reduce using rule 15 (class_inside)

    class               go to state 34
    class_inside_first  go to state 74
    class_inside        go to state 36
    comments            go to state 37
    class_FCMs          go to state 38
    class_FCM           go to state 39
    typespec            go to state 40
    method_decl         go to state 41
    access_modifier     go to state 42
    type_specifier      go to state 43
    ident               go to state 44


State 46

    9 class_body: newline LEFT_BRACE . newline class_inside_first RIGHT_BRACE SEMICOLON
   10           | LEFT_BRACE . newline class_inside_first RIGHT_BRACE SEMICOLON
   11           | LEFT_BRACE . class_inside_first RIGHT_BRACE SEMICOLON

    CLASS_KEY      shift, and go to state 1
    STRUCT_KEY     shift, and go to state 2
    NEWLINE        shift, and go to state 8
    COMMENT        shift, and go to state 21
    PUBLIC_MOD     shift, and go to state 22
    PROTECTED_MOD  shift, and go to state 23
    PRIVATE_MOD    shift, and go to state 24
    CHAR_TYPE      shift, and go to state 25
    BOOL_TYPE      shift, and go to state 26
    SHORT_TYPE     shift, and go to state 27
    INT_TYPE       shift, and go to state 28
    LONG_TYPE      shift, and go to state 29
    FLOAT_TYPE     shift, and go to state 30
    DOUBLE_TYPE    shift, and go to state 31
    VOID_TYPE      shift, and go to state 32
    AUTO_TYPE      shift, and go to state 33
    IDENTIFIER     shift, and go to state 10

    $default  reduce using rule 15 (class_inside)

    class               go to state 34
    class_inside_first  go to state 35
    class_inside        go to state 36
    comments            go to state 37
    class_FCMs          go to state 38
    class_FCM           go to state 39
    typespec            go to state 40
    method_decl         go to state 41
    access_modifier     go to state 42
    type_specifier      go to state 43
    ident               go to state 44
    newline             go to state 75


State 47

    5 class_sig: class_name newline class_body .

    $default  reduce using rule 5 (class_sig)


State 48

    9 class_body: newline . LEFT_BRACE newline class_inside_first RIGHT_BRACE SEMICOLON

    LEFT_BRACE  shift, and go to state 76


State 49

   16 comments: COMMENT idents . newline

    NEWLINE  shift, and go to state 8

    newline  go to state 77


State 50

   69 idents: ident . idents
   70       | ident .

    IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 70 (idents)

    idents  go to state 78
    ident   go to state 50


State 51

   67 pointers: POINTER . pointers

    POINTER  shift, and go to state 51

    $default  reduce using rule 68 (pointers)

    pointers  go to state 79


State 52

   58 type_specifier: CHAR_TYPE pointers .

    $default  reduce using rule 58 (type_specifier)


State 53

   59 type_specifier: BOOL_TYPE pointers .

    $default  reduce using rule 59 (type_specifier)


State 54

   60 type_specifier: SHORT_TYPE pointers .

    $default  reduce using rule 60 (type_specifier)


State 55
